--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="ru">
 
-<html>
+<head>
+    <!-- Указываем кодировку -->
+    <meta charset="UTF-8">
+    <!-- Название сайта -->
+    <title>Выше гор</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
+    <!-- Тело страницы -->
     <header>
-        <nav>
+        <aside> <!-- Добавочный контент -->
+            <nav> <!-- Навигация -->
+                <ul>
+                    <li><a href="/vishe_gor">Выше гор</a></li> <!--Возвращает на главную старницу-->
+                    <li><a href="/blog">Каталог туров</a></li>
+                    <li><a href="/catalog">Блог</a></li>
+                    <li><a href="/contacts">О нас</a></li>
+                </ul>
+            </nav>
+        </aside>
+
+        <img src="./assets/header.jpg" class="img" alt="Image">
+
+        <h1>Выше гор</h1>
+        <h4>Более 100 вариантов горных маршрутов по России под присмотром опытных инструкторов</h4>
+        <p>Туризм — это способ активного отдыха, который тренирует физическую выносливость, укрепляет здоровье и дарит
+            незабываемые впечатления, приближая человека к природе. Преодоление трудностей на маршруте учит принимать
+            решения, работать в команде и преодолевать собственные границы. <br>Используй возможность расширить свои
+            горизонты — выбирай путешествия вместе с туристической командой <strong>Выше гор</strong>.</p>
+    </header>
+    <main>
+        <section>
+            <fieldset>
+                <legend>Популярные направления</legend>
+                <label>Ергаки</label>
+                <img src="./assets/Frame 1 (2).jpg" alt="Image">
+                <label>Байкал</label>
+                <img src="./assets/Frame 3 (2).jpg" class="img" alt="Image">
+                <label>Эльбрус</label>
+                <img src="./assets/Frame 2 (2).jpg" class="img" alt="Image">
+            </fieldset>
+            <br> <button>Выбрать поход</button>
+        </section>
+        <article>
+            <h2>Полезные статьи</h2>
+
             <ul>
-                <li> Обо мне</li>
-                <li> Навыки </li>
-                <li> Мои работы</li>
+                <li><a href="/kak_vibrat_marshrut">Какой туристический маршрут подходит мне?</a></li>
+                <li><a href="/kak_sobrat_rukzak">Как собрать рюкзак в поход?</a></li>
+                <li><a href="/upragnenia_dla_poxoda">Топ-10 физических упражнений для подготовки к походу</a></li>
+            </ul>
+        </article>
+    </main>
+    <footer>
+        <h1>О нас</h1>
+        <section>
+            <img src="./assets/footer.jpg" alt="Image">
+            <p> Однажды в 2020 году три подруги-сибирячки отправились в горный поход и в один из вечеров, сидя у костра
+                под звездным небом, задумали создать туристическую компанию. Так появилась компания "Выше гор". <br> За
+                четыре года наша команда разрослась, мы создали и сводили более, чем 100 маршрутов по всей России. <br>
+                Нам можно доверять, ведь "Выше гор" - это дружная команда опытных интсрукторов, которых объединяет
+                большой опыт горных и пеших походов, наличие разрядов в туризме, альпинизм и скалолазании, а также
+                любовь к горам.</p>
+        </section>
+        <nav> <!-- Навигация -->
+            <ul>
+                <li><a href="/vishe_gor">Выше гор</a></li> <!--Возвращает на главную старницу-->
+                <li><a href="/blog">Каталог туров</a></li>
+                <li><a href="/catalog">Блог</a></li>
+                <li><a href="/contacts">О нас</a></li>
             </ul>
         </nav>
-
-
+    </footer>
 </body>
 
 </html>
