--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form id="contact-form"> <!--Из бутстрапа--> <!-- До этого элемента скроллим в событии №5 -->
+                <form id="contact-form"> <!--Из бутстрапа-->
                     <div class="mb-3">
                         <label for="username" class="form-label">Введите ваше имя и номер телефона</label>
                         <input type="text"  class="form-control" id="username" name="username">
